Install express and cors

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "workout"
   ],
   "author": "Mohammed Sadiq",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
